# youtube-summarizer

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: ytsum.example.yaml
docs/: auto-ingest.md  config.md  pipeline.md  providers.md  scheduling.md
examples/: quickstart.md  sample_transcript.json  urls.example.txt
launches/: youtube_summarizer.md
src/ytsum/: __init__.py  __main__.py  cli.py  config.py  export.py  llm.py  models.py  pipeline.py  prompts.py  sources.py  store.py  summarize.py  transcript.py
src/ytsum/deliver/: __init__.py  digest.py  html.py  markdown.py  stdout.py  telegram.py
tests/: conftest.py  test_config_and_summarize.py  test_deliver_files.py  test_deliver_html.py  test_deliver_telegram.py  test_library.py  test_llm_adapter.py  test_parse_json3.py  test_prompts.py  test_store.py  test_transcript_fetch.py
