[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-summarizer"
version = "0.1.0"
description = "Scriptable, provider-agnostic YouTube transcript summarizer CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "baronguyen001" }]
keywords = ["youtube", "summarizer", "transcript", "gemini", "claude", "openai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Text Processing",
]
dependencies = [
  "yt-dlp>=2025.1.15",
  "requests>=2.31",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
gemini = ["google-genai>=1.0"]
claude = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
dev = [
  "ruff>=0.8",
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "types-PyYAML",
  "types-requests",
]

[project.scripts]
ytsum = "ytsum.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["ytsum"]
omit = [
  "src/ytsum/__main__.py",
  "src/ytsum/cli.py",
  "src/ytsum/pipeline.py",
  "src/ytsum/sources.py",
]
